--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqa.lg</groupId>
-	<artifactId>java-project</artifactId>
+	<artifactId>adactin-project</artifactId>
 	<version>1.0 SNAPSHOT</version>
-	<name>Basic project</name>
-	<description>Basic Java Project for Java Application</description>
+	<name>Adactin project</name>
+	<description>Adactin Project for Automating test cases for Adactin Hotel App.</description>
 
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
